src/components/SearchBar/SearchBar.module.css
.form {
    display: flex;
    padding: 20px;
    margin: 0;
    flex: 1;
    max-width: 600px;
    justify-content: flex-end;
    
}

.input {
    
    border-radius: 10px;
    padding: 10px;
    width: 100%;
    border: none;
}

.button {
    margin-left: 20px;
    border: none;
    padding: 10px 20px;
    border-radius: 10px;
    background-color: blueviolet;
    color: white;
    white-space: nowrap;
    cursor: pointer;
}

@media (max-width: 768px) {
    .form {
        display: flexs;
        width: 40%; 
        padding: 0;
        justify-content: flex-end;
        align-items: center;
    }
}

